# rustcoin3d

./: Cargo.toml
.github/workflows/: ci.yml
crates/rc3d-actions/: Cargo.toml
crates/rc3d-actions/src/: action.rs  element.rs  get_bounding_box.rs  lib.rs  ray_pick.rs  state.rs
crates/rc3d-app/: Cargo.toml
crates/rc3d-app/examples/: cube.rs  import_viewer.rs  import_viewer_async.rs  iv_viewer.rs  picking.rs  rotating_cube.rs  scene_graph.rs  triangle.rs
crates/rc3d-app/src/: app.rs  camera_controller.rs  lib.rs
crates/rc3d-core/: Cargo.toml
crates/rc3d-core/src/: aabb.rs  color.rs  display.rs  id.rs  lib.rs  math.rs  projection.rs
crates/rc3d-engine/: Cargo.toml
crates/rc3d-engine/src/: engine.rs  lib.rs  sensor.rs
crates/rc3d-fields/: Cargo.toml
crates/rc3d-fields/src/: field_map.rs  field_value.rs  lib.rs
crates/rc3d-io/: Cargo.toml
crates/rc3d-io/src/: iv.rs  lib.rs  obj.rs  stl.rs
crates/rc3d-mesh/: Cargo.toml
crates/rc3d-mesh/src/: bvh.rs  lib.rs  meshlet.rs  tessellate.rs  topology.rs
crates/rc3d-nodes/: Cargo.toml
crates/rc3d-nodes/src/: lib.rs
crates/rc3d-render/: Cargo.toml
crates/rc3d-render/src/: cluster.rs  frustum.rs  gpu_resource.rs  hud.rs  hzb.rs  lib.rs  pipelines.rs  render_action.rs  render_graph.rs  render_passes.rs  renderer.rs  shadow_map.rs  sort_keys.rs  texture_cache.rs  vertex.rs
crates/rc3d-render/src/shaders/: blit_tex.wgsl  cluster_compact.wgsl  cluster_cull.wgsl  flat_color.wgsl  hzb_depth_to_mip0.wgsl  hzb_downsample_max.wgsl  hzb_downsample_min.wgsl  outline.wgsl  pbr.wgsl  phong.wgsl  post_tonemap_fxaa.wgsl  shadow_depth.wgsl  triangle.wgsl
crates/rc3d-scene/: Cargo.toml
crates/rc3d-scene/src/: lib.rs  node_data.rs  node_entry.rs  scene_graph.rs  traversal.rs
examples/: scene.iv
