[package]
name = "rc3d-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rc3d-core = { workspace = true }
rc3d-scene = { workspace = true }
rc3d-actions = { workspace = true }
rc3d-render = { workspace = true }
rc3d-engine = { workspace = true }
rc3d-io = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
